# lib-buffer

./: CMakeLists.txt  README.md
src/: ringBuffer.c  ringBuffer.h
src/common/: common_def.h
